--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- CSS Sheeets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/8bd81cdc33.js" crossorigin="anonymous"></script>
