--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
   <!-- Press -->
 
   <section class="colored-section" id="press">
-    <img class="press-logos" src="images/TechCrunch.png" alt="tc-logo">
-    <img class="press-logos" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logos" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logos" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logos" src="TechCrunch.png" alt="tc-logo">
+    <img class="press-logos" src="tnw.png" alt="tnw-logo">
+    <img class="press-logos" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logos" src="mashable.png" alt="mashable-logo">
 
   </section>
 
